--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         with:
           cmd: install
       - name: creating build
-        run:  npm build
+        run:  npm run-script build
         
       - name: install surge
         run: npm install -g surge
