--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,11 @@ jobs:
             version: 12
             
       - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@v2.3.0
+        uses: Borales/actions-yarn@v2.1.0
         with:
           cmd: install
       - name: creating build
-        run:  npm run-script build
+        run:  yarn build
         
       - name: install surge
         run: npm install -g surge
