--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,10 +29,8 @@ jobs:
         with:
             version: 12
             
-      - name: GitHub Action for Yarn
-        uses: Borales/actions-yarn@v2.1.0
-        with:
-          cmd: install
+      - name: Install yarn
+        run: npm install --global yarn
       - name: creating build
         run:  yarn build
         
