--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Install yarn
         run: npm install --global yarn
       - name: creating build
-        run:  npm script build
+        run:  npm build
         
       - name: install surge
         run: npm install -g surge
